news item teaser issue solved, view more link now always aligns to the bottom when expected

--- a/wp-content/themes/inheretheme05/src/scss/partials/components/_news-teaser.scss
+++ b/wp-content/themes/inheretheme05/src/scss/partials/components/_news-teaser.scss
@@ -24,17 +24,20 @@
   }
 
   .entry-content {
-    display: inline-block;
+    display: flex;
     z-index: 25;
     position: relative;
+
+    @media (max-width: 767px) {
+      flex-direction: column;
+    }
   }
 
   img {
-    float: left;
     margin-right: 40px;
     margin-bottom: 40px;
     width: 40%;
-    min-width: 150px;
+    height: 40%;
 
     @media (max-width: 767px) {
       width: 100%;
